# FEDDLib

./: .gitignore  CMakeLists.txt  FEDDlib_Config.h.in  PackagesList.cmake  ProjectName.cmake  README.md  TPLsList.cmake  Version.cmake  configDoxy  key  key.pub  tatus  untitled.m
feddlib/amr/: AdaptiveMeshRefinement.cpp  AdaptiveMeshRefinement.hpp  AdaptiveMeshRefinement_decl.hpp  AdaptiveMeshRefinement_def.hpp  CMakeLists.txt  ErrorEstimation.cpp  ErrorEstimation.hpp  ErrorEstimation_decl.hpp  ErrorEstimation_def.hpp  Error_and_Dist.xmf  ExporterParaViewAMR.hpp  ExporterParaViewAMR_decl.hpp  ExporterParaViewAMR_def.hpp  RefinementFactory.hpp  RefinementFactory_decl.hpp  RefinementFactory_def.hpp  config  p.xmf  u.xmf
feddlib/amr/Exporter/: CMakeLists.txt  ExporterParaViewAMR.cpp  ExporterParaViewAMR_decl.hpp  ExporterParaViewAMR_def.hpp
feddlib/amr/cmake/: Dependencies.cmake  amr_config.h.in
feddlib/amr/html/: AdaptiveMeshRefinement_8cpp.html  AdaptiveMeshRefinement_8cpp__incl.map  AdaptiveMeshRefinement_8cpp__incl.md5  AdaptiveMeshRefinement_8hpp.html  AdaptiveMeshRefinement_8hpp__dep__incl.map  AdaptiveMeshRefinement_8hpp__dep__incl.md5  AdaptiveMeshRefinement_8hpp__incl.map  AdaptiveMeshRefinement_8hpp__incl.md5  AdaptiveMeshRefinement_8hpp_source.html  AdaptiveMeshRefinement__decl_8hpp.html  AdaptiveMeshRefinement__decl_8hpp__dep__incl.map  AdaptiveMeshRefinement__decl_8hpp__dep__incl.md5  AdaptiveMeshRefinement__decl_8hpp__incl.map  AdaptiveMeshRefinement__decl_8hpp__incl.md5  AdaptiveMeshRefinement__decl_8hpp_source.html  AdaptiveMeshRefinement__def_8hpp.html  AdaptiveMeshRefinement__def_8hpp.js  AdaptiveMeshRefinement__def_8hpp__incl.map  AdaptiveMeshRefinement__def_8hpp__incl.md5  AdaptiveMeshRefinement__def_8hpp_source.html  ErrorEstimation_8cpp.html  ErrorEstimation_8cpp__incl.map  ErrorEstimation_8cpp__incl.md5  ErrorEstimation_8hpp.html  ErrorEstimation_8hpp__dep__incl.map  ErrorEstimation_8hpp__dep__incl.md5  ErrorEstimation_8hpp__incl.map  ErrorEstimation_8hpp__incl.md5  ErrorEstimation_8hpp_source.html  ErrorEstimation__decl_8hpp.html  ErrorEstimation__decl_8hpp__dep__incl.map  ErrorEstimation__decl_8hpp__dep__incl.md5  ErrorEstimation__decl_8hpp__incl.map  ErrorEstimation__decl_8hpp__incl.md5  ErrorEstimation__decl_8hpp_source.html  ErrorEstimation__def_8hpp.html  ErrorEstimation__def_8hpp.js  ErrorEstimation__def_8hpp__incl.map  ErrorEstimation__def_8hpp__incl.md5  ErrorEstimation__def_8hpp_source.html  (+106 more)
feddlib/amr/latex/: AdaptiveMeshRefinement_8cpp.tex  AdaptiveMeshRefinement_8cpp__incl.md5  AdaptiveMeshRefinement_8hpp.tex  AdaptiveMeshRefinement_8hpp__dep__incl.md5  AdaptiveMeshRefinement_8hpp__incl.md5  AdaptiveMeshRefinement__decl_8hpp.tex  AdaptiveMeshRefinement__decl_8hpp__dep__incl.md5  AdaptiveMeshRefinement__decl_8hpp__incl.md5  AdaptiveMeshRefinement__def_8hpp.tex  AdaptiveMeshRefinement__def_8hpp__incl.md5  ErrorEstimation_8cpp.tex  ErrorEstimation_8cpp__incl.md5  ErrorEstimation_8hpp.tex  ErrorEstimation_8hpp__dep__incl.md5  ErrorEstimation_8hpp__incl.md5  ErrorEstimation__decl_8hpp.tex  ErrorEstimation__decl_8hpp__dep__incl.md5  ErrorEstimation__decl_8hpp__incl.md5  ErrorEstimation__def_8hpp.tex  ErrorEstimation__def_8hpp__incl.md5  ExporterParaViewAMR_8cpp.tex  ExporterParaViewAMR_8cpp__incl.md5  ExporterParaViewAMR_8hpp.tex  ExporterParaViewAMR_8hpp__dep__incl.md5  ExporterParaViewAMR_8hpp__incl.md5  ExporterParaViewAMR__decl_8hpp.tex  ExporterParaViewAMR__decl_8hpp__dep__incl.md5  ExporterParaViewAMR__decl_8hpp__incl.md5  ExporterParaViewAMR__def_8hpp.tex  ExporterParaViewAMR__def_8hpp__incl.md5  RefinementFactory_8cpp.tex  RefinementFactory_8cpp__incl.md5  RefinementFactory_8hpp.tex  RefinementFactory_8hpp__dep__incl.md5  RefinementFactory_8hpp__incl.md5  RefinementFactory__decl_8hpp.tex  RefinementFactory__decl_8hpp__dep__incl.md5  RefinementFactory__decl_8hpp__incl.md5  RefinementFactory__def_8hpp.tex  RefinementFactory__def_8hpp__incl.md5  (+18 more)
feddlib/amr/tests/: CMakeLists.txt  bfs3D.msh  untitled.geo
feddlib/core/: CMakeLists.txt  FEDDCore.hpp
feddlib/core/AceFemAssembly/: AssembleFE.cpp  AssembleFE.hpp  AssembleFEBlock.cpp  AssembleFEBlock.hpp  AssembleFEBlock_decl.hpp  AssembleFEBlock_def.hpp  AssembleFEFactory.cpp  AssembleFEFactory.hpp  AssembleFEFactory_decl.hpp  AssembleFEFactory_def.hpp  AssembleFE_decl.hpp  AssembleFE_def.hpp  CMakeLists.txt  Helper.cpp  Helper.hpp  configDoxy
feddlib/core/FE/: CMakeLists.txt  Domain.cpp  Domain.hpp  Domain_decl.hpp  Domain_def.hpp  EdgeElements.cpp  EdgeElements.hpp  Elements.cpp  Elements.hpp  EntitiesOfElements.cpp  EntitiesOfElements.hpp  FE.cpp  FE.hpp  FE_decl.hpp  FE_def.hpp  FiniteElement.cpp  FiniteElement.hpp  SMSUtility.cpp  TriangleElements.cpp  TriangleElements.hpp  sms.hpp
feddlib/core/General/: BCBuilder.cpp  BCBuilder.hpp  BCBuilder_decl.hpp  BCBuilder_def.hpp  CMakeLists.txt  DefaultTypeDefs.hpp  ExporterParaView.cpp  ExporterParaView.hpp  ExporterParaView_decl.hpp  ExporterParaView_def.hpp  ExporterTxt.cpp  ExporterTxt.hpp  SmallMatrix.hpp
feddlib/core/IO/: CMakeLists.txt  IO_ParameterList_decl.hpp  IO_Utils.hpp
feddlib/core/LinearAlgebra/: BlockMap.cpp  BlockMap.hpp  BlockMap_decl.hpp  BlockMap_def.hpp  BlockMatrix.cpp  BlockMatrix.hpp  BlockMatrix_decl.hpp  BlockMatrix_def.hpp  BlockMultiVector.cpp  BlockMultiVector.hpp  BlockMultiVector_decl.hpp  BlockMultiVector_def.hpp  CMakeLists.txt  Map.cpp  Map.hpp  Map_decl.hpp  Map_def.hpp  Matrix.cpp  Matrix.hpp  Matrix_decl.hpp  Matrix_def.hpp  MultiVector.cpp  MultiVector.hpp  MultiVector_decl.hpp  MultiVector_def.hpp
feddlib/core/Mesh/: AABBTree.cpp  AABBTree.hpp  AABBTree_decl.hpp  AABBTree_def.hpp  CMakeLists.txt  Mesh.cpp  Mesh.hpp  MeshFileReader.cpp  MeshFileReader.hpp  MeshInterface.cpp  MeshInterface.hpp  MeshInterface_decl.hpp  MeshInterface_def.hpp  MeshPartitioner.cpp  MeshPartitioner.hpp  MeshPartitioner_decl.hpp  MeshPartitioner_def.hpp  MeshStructured.cpp  MeshStructured.hpp  MeshStructured_decl.hpp  MeshStructured_def.hpp  MeshUnstructured.cpp  MeshUnstructured.hpp  (+10 more)
feddlib/problems/: CMakeLists.txt
(+2302 files in other folders)
