SET(Utils_HEADERS
	Utils/FEDDUtils.hpp
CACHE INTERNAL "")

SET(Utils_SOURCES
CACHE INTERNAL "")


SET(LOCAL_HEADERS)
FOREACH(INC ${FE_HEADERS})
  STRING(REPLACE "Utils/" "" LOCAL_INC ${INC})
  SET(LOCAL_HEADERS ${LOCAL_HEADERS} ${LOCAL_INC})
ENDFOREACH()

INSTALL(
  FILES ${LOCAL_HEADERS}
  DESTINATION "${${PROJECT_NAME}_INSTALL_INCLUDE_DIR}/feddlib/core/Utils"
  COMPONENT ${PACKAGE_NAME}
)
